crates/tests/fixtures/harness/data/error/method_opt_with_args/input.rdl

#[win32]
mod Test {
    interface IFoo {
        fn Method(&self, #[opt(42)] value: i32);
    }
}
        